[tool.poetry]
name = "dewy-langchain"
version = "0.1.0"
description = ""
authors = ["Ben Chambers <35960+bjchambers@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "dewy_langchain"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
